# market-intel-platform

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.api  Makefile  README.md  docker-compose.yml  init-db.sql  pyproject.toml  requirements-dev.txt  requirements.txt  run_binance_stream.py  test_platform.py
airflow/dags/: daily_bars_pipeline.py  ingest_intraday.py  model_training.py  polygon_equities_minute_ingest.py
backend/: .dockerignore  Dockerfile  alembic.ini  ingestion_adapters.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/api/routers/: __init__.py  backtest.py  market.py  models.py  signals.py  trading.py
backend/app/api/v1/: __init__.py  backtest.py  market.py  models.py  signals.py  trading.py
backend/app/backtest/: engine.py
backend/app/core/: config.py
backend/app/database/: connection.py
backend/app/db/: session.py
backend/app/db/models/: __init__.py  execution.py  feature_snapshot.py  market_bar.py  model_version.py  order.py  position.py  signal.py
backend/app/ingestion/: bar_writer.py  binance_stream.py  binance_websocket.py  binance_ws_placeholder.py  polygon_equities.py
backend/app/models/: database.py  market_data.py
backend/app/services/: backtest_engine.py  broker_alpaca.py  order_router.py  risk.py  signal_service.py  strategy_runner.py
backend/app/strategies/: base.py  mean_reversion.py  momentum.py  regime_detection.py  registry.py  runner.py  vol_breakout.py
backend/app/trading/: alpaca_adapter.py  order_router.py  risk_checks.py
backend/dags/: daily_bars_pipeline.py  ingest_intraday.py  model_training.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py
backend/src/market_intel/: config.py  logging_config.py
backend/src/market_intel/api/: main.py
backend/src/market_intel/ingestion/: __init__.py  base.py  binance_adapter.py  polygon_adapter.py  scheduler.py
backend/src/market_intel/models/: __init__.py  bar.py  symbol.py  trade.py
backend/src/market_intel/normalization/: __init__.py  normalizer.py
backend/src/market_intel/storage/: __init__.py  interface.py  memory_store.py
docs/: architecture.md  data-model.md  data-pipeline.md  ingestion.md
docs/adr/: ADR-0001-tech-stack.md
frontend/: Dockerfile  index.html  next.config.js  package.json
frontend/pages/: index.tsx
frontend/src/: App.tsx
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
migrations/: 20250901_add_bars_unique_index.sql
scripts/: dev_bootstrap.sh  generate_openapi_types.sh
src/: config.py  logging_setup.py  retry.py
src/ingestion/: ingest_loop.py
tests/: test_health.py  test_polygon_normalize.py
